[gd_scene load_steps=3 format=3 uid="uid://2ju6l4ss3115"]

[ext_resource type="Script" uid="uid://cf6fshxuvt3i6" path="res://system/menu/settings/settings.gd" id="1_cedp5"]
[ext_resource type="Theme" uid="uid://b3cndw47m37di" path="res://system/menu/empty_select.tres" id="1_dbrda"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dbrda")
script = ExtResource("1_cedp5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 309.0
offset_bottom = 84.0

[node name="Library" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ColumnMode" type="HBoxContainer" parent="VBoxContainer/Library"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Library/ColumnMode"]
layout_mode = 2
text = "Show Library in single-column mode:"

[node name="ListMode" type="CheckBox" parent="VBoxContainer/Library/ColumnMode"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="OpenToLast" type="HBoxContainer" parent="VBoxContainer/Library"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Library/OpenToLast"]
layout_mode = 2
text = "Open to last selected game:"

[node name="OpenToLast" type="CheckBox" parent="VBoxContainer/Library/OpenToLast"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="ShowIcons" type="HBoxContainer" parent="VBoxContainer/Library"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Library/ShowIcons"]
layout_mode = 2
text = "Show game icons in Library:"

[node name="ShowIcons" type="CheckBox" parent="VBoxContainer/Library/ShowIcons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="Advanced" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Directories" type="HBoxContainer" parent="VBoxContainer/Advanced"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Advanced/Directories"]
layout_mode = 2
text = "directories.csv:"

[node name="Directories" type="LineEdit" parent="VBoxContainer/Advanced/Directories"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="Tags" type="HBoxContainer" parent="VBoxContainer/Advanced"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Advanced/Tags"]
layout_mode = 2
text = "tags.csv:"

[node name="Control" type="Control" parent="VBoxContainer/Advanced/Tags"]
custom_minimum_size = Vector2(47, 0)
layout_mode = 2

[node name="Tags" type="LineEdit" parent="VBoxContainer/Advanced/Tags"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="Blacklist" type="HBoxContainer" parent="VBoxContainer/Advanced"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Advanced/Blacklist"]
layout_mode = 2
text = "blacklist.csv:"

[node name="Control" type="Control" parent="VBoxContainer/Advanced/Blacklist"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="Blacklist" type="LineEdit" parent="VBoxContainer/Advanced/Blacklist"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="AdvancedToggle" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="AdvancedToggle"]
layout_mode = 2
text = "Show advanced settings"

[node name="CheckBox" type="CheckBox" parent="AdvancedToggle"]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="VBoxContainer/Library/ColumnMode/ListMode" to="." method="_on_list_mode_toggled"]
[connection signal="toggled" from="VBoxContainer/Library/OpenToLast/OpenToLast" to="." method="_on_open_to_last_toggled"]
[connection signal="toggled" from="VBoxContainer/Library/ShowIcons/ShowIcons" to="." method="_on_show_icons_toggled"]
